# rehabbot

./: LICENSE  README.md  pyproject.toml
rehabbot/: __init__.py
rehabbot.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
rehabbot/envs/: EvalCallback.py  StopTrainingOnRewardThreshold.py  __init__.py  check_point.py  mujoco_env.py  pid_control.py  rehab_reach_v0.py
rehabbot/envs/UR5e_tensorboard/PPO_0/: events.out.tfevents.1749898176.Vicky.1384.0  events.out.tfevents.1750059220.Vicky.657.0  events.out.tfevents.1750060074.Vicky.812.0  events.out.tfevents.1750061964.Vicky.1397.0  events.out.tfevents.1750067620.Vicky.1959.0  events.out.tfevents.1750072821.Vicky.2127.0  events.out.tfevents.1750147513.Vicky.3993.0  events.out.tfevents.1750226771.Vicky.5136.0
rehabbot/envs/UR5e_tensorboard/PPO_0_5c/: events.out.tfevents.1749832752.Vicky.42245.0  events.out.tfevents.1749834958.Vicky.43395.0
rehabbot/envs/UR5e_tensorboard/SAC_0/: events.out.tfevents.1750231801.Vicky.5363.0  events.out.tfevents.1750248916.Vicky.5829.0  events.out.tfevents.1750328232.Vicky.8174.0  events.out.tfevents.1750331104.Vicky.8378.0  events.out.tfevents.1750341860.Vicky.9318.0
rehabbot/envs/checkpoint/: evaluations.npz  npz_viewer.py
rehabbot/envs/xml_files/: human_UR5E2.xml  humanoid.xml  humanoid2.xml  humanoid_CMU.xml  humanoid_UR5E.xml  scene.xml  ur5e.xml  visual.xml
